# cargo-quality

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  action.yml  cliff.toml  codecov.yml  install-completions.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  rust.yml
LICENSES/: MIT.txt
benches/: analyzers.rs
src/: analyzer.rs  analyzers.rs  cli.rs  differ.rs  error.rs  file_utils.rs  fixer.rs  formatter.rs  help.rs  lib.rs  main.rs  mod_rs.rs  report.rs
src/analyzers/: empty_lines.rs  format_args.rs  inline_comments.rs  path_import.rs
src/differ/: apply.rs  display.rs  generator.rs  types.rs
src/differ/display/: formatting.rs  grid.rs  grouping.rs  render.rs  types.rs
