[package]
name = "cargo-quality"
version = "0.1.0"
edition = "2024"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Professional Rust code quality analysis tool with hardcoded standards"
license = "MIT"
repository = "https://github.com/RAprogramm/cargo-quality"
homepage = "https://github.com/RAprogramm/cargo-quality"
documentation = "https://docs.rs/cargo-quality"
readme = "README.md"
keywords = ["cargo", "quality", "formatter", "analyzer", "linter"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".github", "target", ".git"]
rust-version = "1.90"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
syn = { version = "2", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
masterror = "0.24"
walkdir = "2"
prettyplease = "0.2"
owo-colors = "4"

[dev-dependencies]
criterion = "0.7"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[[bin]]
name = "cargo-quality"
path = "src/main.rs"
