[package]
name = "cargo-quality"
version = "0.2.0"
edition = "2024"
authors = ["RAprogramm <andrey.rozanov.vl@gmail.com>"]
description = "Professional Rust code quality analysis tool with hardcoded standards"
license = "MIT"
repository = "https://github.com/RAprogramm/cargo-quality"
homepage = "https://github.com/RAprogramm/cargo-quality"
documentation = "https://docs.rs/cargo-quality"
readme = "README.md"
keywords = ["cargo", "quality", "formatter", "analyzer", "linter"]
categories = ["development-tools", "command-line-utilities"]
exclude = [".github", "target", ".git"]
rust-version = "1.90"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
syn = { version = "2", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }
masterror = "0.25"
ignore = "0.4"
prettyplease = "0.2"
owo-colors = "4"
terminal_size = "0.4"
unicode-width = "0.2"
console = "0.16"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "cargo_quality"
path = "src/lib.rs"

[[bin]]
name = "cargo-qual"
path = "src/main.rs"

[[bench]]
name = "analyzers"
harness = false
